deployment/egress/wttr-egress-route-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wttr-egress-route
spec:
  hosts:
  - wttr.in
  gateways:
  - istio-system/egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: wttr
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-system/egressgateway
      port: 80
    route:
    - destination:
        host: wttr.in
        port:
          number: 80
      weight: 100
